Issue #3165941 by jeni_dc, saschaeggi: Overflow cutting off Linkit select options in CKEditor link dialog

--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -4,7 +4,6 @@
   left: 50% !important;
   border: 0 none !important;
   border-radius: 8px;
-  overflow: hidden;
   transform: translate(-50%, -50%);
 }
 
