--- a/styles/components/_tabs.scss
+++ b/styles/components/_tabs.scss
@@ -285,3 +285,10 @@
     border-color: var(--colorGinBorder);
   }
 }
+
+@media screen and (min-width: 85em) {
+  .js .vertical-tabs__item {
+    overflow: visible;
+    float: left;
+  }
+}
